deploy/openshift/wanaku-tool-service-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wanaku-tool-service-http
  name: wanaku-tool-service-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanaku-tool-service-http
  template:
    metadata:
      labels:
        app: wanaku-tool-service-http
    spec:
      containers:
        - name: wanaku-tool-service-http
          image: quay.io/wanaku/wanaku-tool-service-http:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: services-volume
              mountPath: /home/default/.wanaku/services
      volumes:
        - name: services-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wanaku-tool-service-http
  name: wanaku-tool-service-http
spec:
  ports:
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: wanaku-tool-service-http
  sessionAffinity: None
  type: ClusterIP
