deploy/openshift/wanaku-router-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wanaku-router-web
  name: wanaku-router-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanaku-router-web
  template:
    metadata:
      labels:
        app: wanaku-router-web
    spec:
      containers:
        - name: wanaku-router-web
          image: quay.io/wanaku/wanaku-router-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wanaku-router-web
  name: wanaku-router-web
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: wanaku-router-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wanaku-router-web
  name: wanaku-router-web
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: wanaku-router-web
    weight: 100
  wildcardPolicy: None
